Fix input search navbar on mobile screen

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -33,6 +33,9 @@ nav{
                 .tainacan-input-search{
                     height: 27px !important;
                     width: 355px;
+                    @media only screen and (max-width: 576px){
+                        width: 229px;
+                    }
                     &::placeholder{
                         font-size: 12px;
                         color: #898d8f;
